--- a/templates/login.html
+++ b/templates/login.html
@@ -9,32 +9,77 @@
     <!-- Custom styles for this template -->
     <link href="signin.css" rel="stylesheet">
 
+  <style>
+  body {
+    background-image: url("../static/images/Badger-and-Mouse-reading.jpg");
+    background-repeat: repeat-y;
+    background-position: center left;
+    background-attachment: fixed;
+  }
+  .boxed {
+    border: 5px solid green;
+  }
+  </style>
   </head>
 
-  <body>
 
+  <body>
     <div class="container">
 
-      <form class="form-signin">
-        <h2 class="form-signin-heading">Scholar Sign In</h2>
-        <input type="text" class="form-control" placeholder="Email address" autofocus>
-        <input type="password" class="form-control" placeholder="Password">
-        <label class="checkbox">
-          <input type="checkbox" value="remember-me"> Remember me
-        </label>
-        <a href="/scholarmain" class="btn btn-lg btn-primary btn-block" role="button">Sign in</a> 
+      <form method="post" action="/scholarmain" id="info" enctype="multipart/form-data" class="form-signin">
+
+        <div class="row">
+          <div class="col-md-3">
+            <h2 class="form-signin-heading">Scholar Sign In!</h2>
+          </div>
+        </div>
 
 
-        <h2 class="form-signin-heading">Staff Sign In </h2>
-        <input type="text" class="form-control" placeholder="Email address" autofocus>
-        <input type="password" class="form-control" placeholder="Password">
-        <label class="checkbox">
-          <input type="checkbox" value="remember-me"> Remember me
-        </label>
-        <a href="/staffmain" class="btn btn-lg btn-primary btn-block" role="button">Sign in</a>
+        <div class="row">
+          <div class="col-md-3">
+            <input type="text" name="scholar_name" class="form-control" placeholder="Scholar Name" value="" autofocus>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-3 actions">
+             <input type="submit" class="btn btn-lg btn-primary btn-block" value="Sign In">
+          </div>
+        </div>
+      </form>      
+
+
+      <form method="post" action="/scholarmain" id="info" enctype="multipart/form-data" class="form-signin">
+
+        <div class="row">
+          <div class="col-md-3">
+            <h2 class="form-signin-heading">Staff Sign In </h2>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-3">
+            <input type="text" class="form-control" placeholder="Email address" autofocus>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-3">
+            <input type="password" class="form-control" placeholder="Password">
+          </div>
+        </div>
+        
+        <div class="row">
+          <div class="col-md-3">
+            <a href="/staffmain" class="btn btn-lg btn-primary btn-block" role="button">Sign in</a>
+          </div>
+        </div>
+      
+      
       </form>
 
     </div> <!-- /container -->
+
 
 
     <!-- Bootstrap core JavaScript
