--- a/templates/scholarmain.html
+++ b/templates/scholarmain.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Bootstrap, from Twitter</title>
+    <title>welcome, scholar</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -12,7 +12,11 @@
     <link href="static/css/bootstrap.css" rel="stylesheet">
     <style>
       body {
-        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+        padding-top: 30px; /* 60px to make the container go all the way to the bottom of the topbar */
+        background-image: url("../static/images/Frog.jpg");
+        background-repeat: no-repeat;
+        background-position: center bottom;
+        background-attachment: fixed;
       }
     </style>
     <link href="static/css/bootstrap-responsive.css" rel="stylesheet">
@@ -22,35 +26,27 @@
 
   <body>
 
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="brand" href="#">Project name</a>
-          <a class="brand" href="#">Logout</a>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
+   <nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">WebSiteName</a>
     </div>
+    <div>
+      <ul class="nav navbar-nav">
+        <li><a href="/activegoals" role="button">Active Goals</a></li>
+        <li><a href="/goalgallery" role="button">Goal Gallery</a></li> 
+        <li><a href="/scholarlibrary" role="button">Your Library</a></li>
+        <li><a href="/logout" role="button">Logout</a></li> 
+      </ul>
+    </div>
+  </div>
+</nav>
 
 
     <div class="container">
 
-      <h1>Scholar's Home Page! Welcome</h1>
-      <a href="/scholarmain" class="btn btn-lg btn-primary btn-block" role="button">View Active Goals</a> 
-      <a href="/scholarmain" class="btn btn-lg btn-primary btn-block" role="button">View Goal Gallery</a> 
-      <a href="/scholarmain" class="btn btn-lg btn-primary btn-block" role="button">View your library</a> 
-      <p>Click one of the above buttons!</p>
+      <h1>Welcome {{scholar_name}} from {{scholar_school}}!</h1>
+  
 
     </div> <!-- /container -->
 
