--- a/templates/scholarmain.html
+++ b/templates/scholarmain.html
@@ -1,15 +1,7 @@
+{% extends "base.html" %}
 
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>welcome, scholar</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+{% block body %}
 
-    <!-- Le styles -->
-    <link href="static/css/bootstrap.css" rel="stylesheet">
     <style>
       body {
         padding-top: 30px; /* 60px to make the container go all the way to the bottom of the topbar */
@@ -21,26 +13,6 @@
     </style>
     <link href="static/css/bootstrap-responsive.css" rel="stylesheet">
 
-   
-  </head>
-
-  <body>
-
-   <nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">WebSiteName</a>
-    </div>
-    <div>
-      <ul class="nav navbar-nav">
-        <li><a href="/activegoals" role="button">Active Goals</a></li>
-        <li><a href="/goalgallery" role="button">Goal Gallery</a></li> 
-        <li><a href="/scholarlibrary" role="button">Your Library</a></li>
-        <li><a href="/logout" role="button">Logout</a></li> 
-      </ul>
-    </div>
-  </div>
-</nav>
 
 
     <div class="container">
@@ -49,6 +21,5 @@
   
 
     </div> <!-- /container -->
-
-  </body>
-</html>
+  
+{% endblock %}
