continuing to onnect the pages. added a add goal form

--- a/templates/activegoals.html
+++ b/templates/activegoals.html
@@ -20,6 +20,7 @@
 </div>
 	{{user.goals}}
 
-<a href="/addgoal" class="btn btn-lg btn-info"><span class="glyphicon glyphicon-star-empty"></span>Create New Goal</a>
+<a href="/addgoal" method="GET" class="btn btn-lg btn-info"><span class="glyphicon glyphicon-star-empty"></span>Create New Goal</a>
 {% endblock %}  
+
 
