--- a/templates/addgoal.html
+++ b/templates/addgoal.html
@@ -9,6 +9,9 @@
         background-position: center bottom;
         background-attachment: fixed;
       }
+      .row {
+      	margin-bottom: 10px;
+      }
 </style>
 
 
@@ -16,25 +19,80 @@
 <div class="container">
 
 <h1>
-	Add A Goal
+	Add a Goal for the Semester
 </h1>
 
-<form role="form">
+<form method="post" id="addgoal" action="/addgoal" role="multipart/form" class="form-signin">
 
-  <div class="form-group">
+<div class="row">
+   <div class="col-md-3" "form-group">
+      <label for="sel1">I want to read</label>
+      <select class="form-control" name = "goal_number" id="sel1">
+        <option>1</option>
+        <option>2</option>
+        <option>3</option>
+        <option>4</option>
+        <option>5</option>
+        <option>6</option>
+        <option>7</option>
+        <option>8</option>
+        <option>9</option>
+        <option>10</option>
+        <option>11</option>
+        <option>12</option>
+        <option>13</option>
+        <option>14</option>
+        <option>15</option>
+        <option>16</option>
+        <option>17</option>
+        <option>18</option>
+        <option>19</option>
+        <option>20</option>
+        <option>21</option>
+        <option>22</option>
+        <option>23</option>
+        <option>24</option>
+        <option>25</option>
+        <option>26</option>
+        <option>27</option>
+        <option>28</option>
+        <option>29</option>
+        <option>30</option>
+        <option>31</option>
+        <option>32</option>
+        <option>33</option>
+        <option>34</option>
+
+      </select>
+   </div>	
+
+     <div class="col-md-3" "form-group">
+      <label for="sel1">How Many?/For How Many?</label>
+      <select class="form-control" name="goal_description" id="sel1">
+        <option>Pages</option>
+        <option>Books</option>
+        <option>Chapers</option>
+        <option>Hours</option>
+        <option>Minutes</option>
+
+      </select>
+  </div>
+</div>
+
+<!-- <div class="row">
+  <div class="col-md-6" "form-group">
     <label for="description">Short Description:</label>
-    <input type="text" name="description" class="form-control" placeholdre="Goal Description" value="">
+    <input type="text" name="description" class="form-control" placeholder="I hope to..." value="">
   </div>
+</div> -->
 
-  <div class="form-group">
-    <label for="pwd">Password:</label>
-    <input type="password" class="form-control" id="pwd">
+<div class="row">
+  <div class="col-md-6 actions">
+     <input type="submit" class="btn btn-lg btn-primary btn-block" value="Add">
   </div>
-  <div class="checkbox">
-    <label><input type="checkbox"> Remember me</label>
-  </div>
-  <button type="submit" class="btn btn-default">Submit</button>
+</div>
 </form>
+
 
 </div>
 {% endblock %}  
