able to grab a cover and the isbn

--- a/templates/addendurancegoal.html
+++ b/templates/addendurancegoal.html
@@ -19,17 +19,14 @@
 <div class="container">
 
 <h1>
-  Strength Goal:
+	Add you two semester-long goals
 </h1>
-<h2>
-	How many books or chapters do you want to read this semester?
-</h2>
 
 <form method="post" id="addgoal" action="/addgoal" role="multipart/form" class="form-signin">
 
 <div class="row">
    <div class="col-md-3" "form-group">
-      <label for="sel1">I want to read</label>
+      <label for="sel1">I want to read for</label>
       <select class="form-control" name = "goal_number" id="sel1">
         <option>1</option>
         <option>2</option>
@@ -70,10 +67,10 @@
    </div>	
 
      <div class="col-md-3" "form-group">
-      <label for="sel1">How Many?</label>
+      <label for="sel1"></label>
       <select class="form-control" name="goal_description" id="sel1">
-        <option>Books</option>
-        <option>Chapers</option>
+        <option>Hours</option>
+        <option>Minutes</option>
       </select>
   </div>
 </div>
