--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,7 @@
          -->
         <li><a href="/activegoals" role="button">Active Goals</a></li> 
         <li><a href="/goalgallery" role="button">Goal Gallery</a></li> 
-        <li><a href="/Library" role="button">My Library</a></li> 
+        <li><a href="/scholarlibrary" role="button">My Library</a></li> 
         <li><a href="/logout" role="button">Logout</a></li> 
       </ul>
     </div>
