--- a/templates/activegoals.html
+++ b/templates/activegoals.html
@@ -18,18 +18,37 @@
 {% for goal in goals %}
 		{% if goal.achieved == False %}
 			<div class="row">
-			<h2>Your Goal Is To Read {{goal.goal_number}} {{goal.goal_description}}</h2>
-			<h1>status: {{goal.status}}/{{goal.goal_number}}</h1>
-			
+			{% if goal.strength_or_endurance == 'strength' %}
+				<h2>Your Goal Is To Read for {{goal.goal_number}} {{goal.goal_description}}</h2>
+				<h1>status: {{goal.status}}/{{goal.goal_number}}</h1>
+			{% elif goal.strength_or_endurance == 'endurance' %}
+				<h2>Your Goal Is To Read {{goal.goal_number}} {{goal.goal_description}}</h2>
+				<h1>status: {{goal.status}}/{{goal.goal_number}}</h1>
+			{% endif %}
 			<a href="/editgoal/{{goal.id}}" class="btn btn-xs btn-info"><span class="glyphicon glyphicon-star-empty"></span>Edit Goal</a>
-
 			</div>
 		{% endif %}
 {% endfor %}
 
+{% if goals|length == 0 %}
+	<div class= "row">
+	<a href="/addgoal" method="GET" class="btn btn-lg btn-info"><span class="glyphicon glyphicon-star-empty"></span>Set Your Strength Goal</a>
+	
+	<a href="/addendurancegoal" method="GET" class="btn btn-lg btn-info"><span class="glyphicon glyphicon-star-empty"></span>Set Your Endurance Goal</a>
+	</div>
+{% elif goals|length == 1 %}
+	{% if goals[0].strength_or_endurance == 'strength' %}
+		<a href="/addendurancegoal" method="GET" class="btn btn-lg btn-info"><span class="glyphicon glyphicon-star-empty"></span>Set Your Endurance Goal</a>
+	{% elif goals[0].strength_or_endurance == 'endurance' %}
+		<a href="/addgoal" method="GET" class="btn btn-lg btn-info"><span class="glyphicon glyphicon-star-empty"></span>Set Your Strength Goal</a>
+	{% endif %}
+{% endif %}
 
 
-<a href="/addgoal" method="GET" class="btn btn-lg btn-info"><span class="glyphicon glyphicon-star-empty"></span>Create New Goal</a>
+<div>
+	<h1>Short Reading Goals</h1>
+
+
 {% endblock %}  
 
 
