--- a/templates/addendurancegoal.html
+++ b/templates/addendurancegoal.html
@@ -19,10 +19,10 @@
 <div class="container">
 
 <h1>
-	Add you two semester-long goals
+	Add your endurance goal!
 </h1>
 
-<form method="post" id="addgoal" action="/addgoal" role="multipart/form" class="form-signin">
+<form method="post" id="addgoal" action="/addendurancegoal" role="multipart/form" class="form-signin">
 
 <div class="row">
    <div class="col-md-3" "form-group">
