--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,9 @@
   
     <link href="static/css/bootstrap-responsive.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-    
+    <link rel="icon" type="image/png" href="static/images/book-stack.gif">
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
    
@@ -33,7 +35,7 @@
 
 
 
-   <nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse">
   <div class="container-fluid">
  
 
