--- a/templates/editendurancegoal.html
+++ b/templates/editendurancegoal.html
@@ -16,7 +16,7 @@
 	Edit your Goal
 </h1>
 <h1> {{ goal.goal_number }}</h1>
-<form method="post" id="changegoal" action="/editstrengthgoal/{{goal.id}}" method="post" role="multipart/form" class="form-signin">
+<form method="post" id="changegoal" action="/editendurancegoal/{{goal.id}}" method="post" role="multipart/form" class="form-signin">
 
 <div class="row">
    <div class="col-md-3" "form-group">
@@ -63,9 +63,8 @@
      <div class="col-md-3" "form-group">
       <label for="sel1">How Many?/For How Many?</label>
       <select class="form-control" name="goal_description" id="sel1">
-        <option>Pages</option>
-        <option>Books</option>
-        <option>Chapers</option>
+        <option>Hours</option>
+        <option>Minutes</option>
 
       </select>
   </div>
