--- a/templates/goalgallery.html
+++ b/templates/goalgallery.html
@@ -1,5 +1,8 @@
+<div id="pdf">
+
 {% extends "base.html" %}
 {% block body %}
+
 
 <style>
       body {
@@ -10,7 +13,7 @@
         background-attachment: fixed;
       }
 </style>
-<div class="container" id="pdf">
+<div class="container">
 
       <h1>{{user}}'s Achieved Goals!</h1>
 
@@ -30,6 +33,8 @@
 </div>
 
 <input type="button" class="btn btn-lg btn-info" onclick="printDiv('pdf')" value="Print your Goal Gallery!" />
+
+</div>
 
 <script>
 
