--- a/templates/scholarlibrary.html
+++ b/templates/scholarlibrary.html
@@ -15,21 +15,17 @@
 
 <h1>{{user}}'s Library!</h1>
 
-{% for book in rating_dictionary.keys() %}
+{% for book in book_dictionary.keys() %}
 		<div class="row">
-			<img src="http://covers.openlibrary.org/b/isbn/{{rating_dictionary[book][1]}}-L.jpg"/>
+			<img src="{{book.cover_url}}"/>
 			<h3>{{book.title}}</h3>
 			<h3>by {{book.author}}</h3>
-			<h3>Your rating!: {{rating_dictionary[book][0]}}</h3>
+			<h3>Your rating!: {{book_dictionary[book]}}</h3>
 			<h3>_____________________________</h3>
 		</div>
 {% endfor %}
 
-{% for book in isbn_dictionary.keys() %}
-	<div class="row">
-		<p>wow</p>
-		<p> {{isbn_dictionary[book]}} </p>
-{% endfor %}
+
 
 
 
